Not a commit war, we agreed on this, but I screwed up the previous time. Corrected. (Not showing you are here + current, but the rest)
svn path=/plonetheme.sunburst/trunk/; revision=36431

--- a/plonetheme/sunburst/skins/sunburst_styles/public.css
+++ b/plonetheme/sunburst/skins/sunburst_styles/public.css
@@ -233,9 +233,8 @@ q {
 
 #breadcrumbs-you-are-here {}
 #breadcrumbs-home,
-#breadcrumbs-current,
-#breadcrumbs-1 {
-    display: inline;
+#breadcrumbs-current {
+    display: none;
 }
 #portal-breadcrumbs {
 	font-size: 80%;
